--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,6 +14,9 @@
     display: block;
 
 }
+.profile-image {
+    width: 100%;
+}
  .project {
     padding-right: 1em;
 	padding-left: 1em;
@@ -53,6 +56,9 @@ footer{
     padding: 5px;
 
 }
+.bigger-screen {
+    display: none;
+}
 
 /* media queries */ 
 
@@ -69,11 +75,38 @@ footer{
  .portfolio {
     flex-direction: row;
     flex-wrap: wrap;
+    margin: auto;
+    max-width: 90%;
+    
  }
- .project{
-    flex: 1;
+ .project {
+    flex: 50%;
+    text-align: center;
  }
  #profile-info {
     display: flex;
+    margin: 5%;
  }
+ .to-top {
+    display: none;
+ }
+ .bigger-screen {
+    display: inline-block;
+ }
+}
+
+@media (min-width: 1024px) {
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+.profile-info {
+    margin: 5%;
+}
+
+.project {
+    flex: 30%;
+}
 }
