--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -101,6 +101,9 @@ footer{
     flex-wrap: wrap;
     flex-direction: row;
 }
+.name {
+    margin-left: 10px;
+}
 .profile-info {
     margin: 5%;
 }
